# vimConfig

./: .clang-format  Dockerfile  autoCommand.sh  bashrc  coc-settings.json  dockerRun.sh  dockerRunIde.sh  dockerVolume.sh  fontConfig.txt  init.lua  init.vim  tidy-format  vimrc
config/: bashrc  init.lua  init.vim  init2.lua  nvim.project.lua
examples/cmakeImportableComponents/libSupa/: CMakeLists.txt  Dockerfile  Supa-config.cmake
examples/cmakeImportableComponents/libSupa/foo/: CMakeLists.txt  foo-config.cmake.in
examples/cmakeImportableComponents/libSupa/foo/source/: Supa.cpp
examples/cuda/: CMakeLists.txt  Dockerfile  run.sh
examples/cuda/include/: example.cuh
examples/cuda/source/: example.cu  main.cpp
examples/makeCmakePackageConan/: Dockerfile  conanfile.py  foo-config.cmake.in
examples/makeCmakePackageConan/source/: Fooo.cpp
examples/projectRunner/: CMakeLists.txt  Dockerfile  run.sh
examples/projectRunner/makeCmakePackageConan/: CMakeLists.txt
examples/projectRunner/makeCmakePackageConan/include/fooo/: Fooo.hpp
examples/projectRunner/source/: Logger.hpp  main.cpp
notes/: font.txt  uml.puml
notes/examples/cpp/: logger.hpp  templateConfigurationHolderWithPossibleDelta.cpp  templateServiceProvider.cpp
projectStarter/: CMakeLists.txt  Dockerfile
projectStarter/source/: Logger.hpp  app.cpp
randomStuff/: flow.py
randomStuff/bitView/: CMakeLists.txt  Dockerfile  bitView.cpp
randomStuff/nvimtmp/: Dockerfile  Dockerfile.back  init.lua  patchDocker.sh  run.sh
scripts/: Dockerfile  execCommandOnNvimWrite.sh  patchDockerfile.sh  runDockerfile.sh
utils/: execCommandOnNvimWrite.sh  renamePictures.sh
